--- a/styles/rust-doc-viewer.less
+++ b/styles/rust-doc-viewer.less
@@ -1,17 +1,30 @@
-@import "octicon-mixins";
+@import "ui-variables";
+
+.item-views {
+    background-color: #fff;
+}
 
 iframe
 {
-    position: fixed;
+    box-sizing: border-box;
+    padding: 0;
+
+    background-color: #fff;
+
+    display: block;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+
+    margin-left: 10px;
 
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
 
-    height: 100%;
     width: 100%;
+    height: 100%;
+    border: 0;
 
-    border: 0 solid transparent;
-    outline: none;
 }
